--- a/index.html
+++ b/index.html
@@ -29,16 +29,18 @@
             <h1 class="qui" >Qui sommes-nous ?</h1>
             <div>
                 <p>JoCorporation, qu’est-ce que c’est ?<br><br>
-    - C’est une entreprise de développement de bots, tu peux prendre un forfait gratuit (qui n’est pas customisable) ou un forfait payant (qui est customisable).
+    - C’est une entreprise de développement, tu peux prendre un forfait gratuit (qui n’est pas customisable) ou un forfait payant (qui est customisable).
     <br><br>
                 En quel langage sont programmés les bots ?<br><br>
     - Ils sont programmés en Python par notre équipe.<br><br>
+    En quel langage sont programmés les sites web ?<br><br>
+    - Ils sont programmés en HTML et CSS pour les animation plus pousser en JAVA SCRIPT et les base de donner et autre en PHP ET SQL par notre équipe.<br><br>
                 En combien de temps serai-je livré ?<br><br>
-    - Cela dépend de la disponibilité de notre équipe... il peut arriver que ton bot soit fait rapidement mais parfois il faudra attendre jusqu'à 4/5 semaines...<br><br>
-                Mon bot sera-t-il hébergé si je prends un forfait payant/gratuit ?<br><br> 
+    - Cela dépend de la disponibilité de notre équipe... il peut arriver que ton produit soit fait rapidement mais parfois il faudra attendre jusqu'à 4/5 semaines... pour les bot mais pour les site web ce sera en fonction de votre demande<br><br>
+                Mon bot et mon site web sera-t-il hébergé si je prends un forfait payant/gratuit ?<br><br> 
     - Non, ce sera à toi de prendre un hébergeur.<br><br>
                 Pourquoi cette entreprise et pas une autre ?<br><br>
-    - Car nous sommes fiables. Certes une livraison peut prendre du temps, mais vous serez toujours livrés !
+    - Car nous sommes fiables. Certes une livraison peut prendre du temps, mais vous serez toujours livrés !</p>
             </div>    
       </section>      
     
