--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <div class="packcontent">
                         <a href="https://forms.gle/epuDTUs3PCokV6iJ6" class="pack">Bot Pack gratuit <br><br> 0€</a>
                         <div class="dropdown">
-                            <span>Description (click ici)</span>
+                            <button class="dropbtn">Description (click ici)</button>
                             <div class="dropdown-content">
                             <p> Préfixe : ^<br> Commande de modération :<br>    kick<br>    ban/unban<br>    mute/unmute<br>	warn<br><br>	Command fun :<br>    slap<br>    kiss <br>    hug<br>    cuddle <br>    feed<br>    tickle<br>    joke<br>   8ball<br><br>Autre Commande :<br>   tell<br>   say<br>   suggestion <br><br>Info Commande :<br>    serverinfo </p>
                             </div>
@@ -88,7 +88,7 @@
                     <div class="packcontent">
                         <a href="https://forms.gle/w1vgob1x8nVqYHc39" class="pack">Bot Pack payant <br><br> 10€</a>
                         <div class="dropdown">
-                            <span>Description (click ici)</span>
+                            <button class="dropbtn">Description (click ici)</button>
                             <div class="dropdown-content">
                             <p>Préfixe : au choit<br> Commande au choit x4</p>
                             </div>
@@ -98,7 +98,7 @@
                     <div class="packcontent">
                         <a href="https://forms.gle/kL2MR1c9QdSXLD3J7" class="pack">Site web Pack gratuit <br><br>0€</a>
                         <div class="dropdown">
-                            <span>Description (click ici)</span>
+                            <button class="dropbtn">Description (click ici)</button>
                             <div class="dropdown-content">
                             <p>Site sur mesure mais avec les langues HTML et CSS <br> Nombre de page = 2page</p>
                             </div>
@@ -108,7 +108,7 @@
                     <div class="packcontent">
                         <a href="https://forms.gle/kL2MR1c9QdSXLD3J7" class="pack">Site web Pack payant <br><br> 50€</a>
                         <div class="dropdown">
-                            <span>Description (click ici)</span>
+                            <button class="dropbtn">Description (click ici)</button>
                             <div class="dropdown-content">
                             <p>Site web sur mesure mais avec les langues HTML et CSS SANS BASE DE DONNÉES <br><br>Nombre de page = 3page</p>
                             </div>
@@ -118,7 +118,7 @@
                     <div class="packcontent">
                         <a href="https://forms.gle/kL2MR1c9QdSXLD3J7" class="pack">Site web Pack payant +<br><br>150€ </a>
                         <div class="dropdown">
-                            <span>Description (click ici)</span>
+                            <button class="dropbtn">Description (click ici)</button>
                             <div class="dropdown-content">
                             <p>Site web sur mesure mais avec les langues HTML et CSS et base de données <br><br>Nombre de page = 4page</p>
                             </div>
