--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 En quel langage sont programmés les bots ?<br><br>
     - Ils sont programmés en Python par notre équipe.<br><br>
     En quel langage sont programmés les sites web ?<br><br>
-    - Ils sont programmés en HTML et CSS pour les animation plus pousser en JAVA SCRIPT et les base de donner et autre en PHP ET SQL par notre équipe.<br><br>
-                En combien de temps serai-je livré ?<br><br>
+    - Ils sont programmés en HTML et CSS pour les animation plus poussées en JAVA SCRIPT et les base de données et autre en PHP ET SQL par notre équipe.<br><br>
+                En combien de temps serais-je livré ?<br><br>
     - Cela dépend de la disponibilité de notre équipe... il peut arriver que ton produit soit fait rapidement mais parfois il faudra attendre jusqu'à 4/5 semaines... pour les bot mais pour les site web ce sera en fonction de votre demande<br><br>
                 Mon bot et mon site web sera-t-il hébergé si je prends un forfait payant/gratuit ?<br><br> 
     - Non, ce sera à toi de prendre un hébergeur.<br><br>
