--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="https://forms.gle/q8saWTGFL1jb49H76">Contact</a></li>
                     <li><a href="#Boutique">Boutique</a></li>
                     <li><a href="#Acceuil">Acceuil</a></li>
-                    <li style="float:left"><p>JoCorporation</p></li>
+                    <li style="float:left"><a>JoCorporation</a></li>
                 </ul>
 	<scroll-container>
             <scroll-page id="Acceuil">
